--- a/style.css
+++ b/style.css
@@ -176,12 +176,12 @@ body{
             .imgbox{
                 width: 100%;
                 height: 100vh;
-                background-image: url('img/carousel-1.jpg');
+                background-image: url('carousel-1.jpg');
             }
             .imgbox2{
                 width: 100%;
                 height: 100vh;
-                background-image: url('img/carousel-2.jpg');
+                background-image: url('carousel-2.jpg');
             }
 
             .imgbox, .imgbox2{
@@ -308,10 +308,10 @@ body{
                 border-radius: 15px;
             }
             .img1{
-                background-image: url('img/about-1.jpg');
+                background-image: url('about-1.jpg');
             }
             .img2{
-                background-image: url('img/about-2.jpg');
+                background-image: url('about-2.jpg');
                 margin-left: 100px;
                 margin-top: 120px;
             }
@@ -506,22 +506,22 @@ body{
                     }
                     
                     .img1{
-                        background-image: url('img/project-1.jpg');
+                        background-image: url('project-1.jpg');
                     }
                     .img2{
-                        background-image: url('img/project-2.jpg');
+                        background-image: url('project-2.jpg');
                     }
                     .img3{
-                        background-image: url('img/project-3.jpg');
+                        background-image: url('project-3.jpg');
                     }
                     .img4{
-                        background-image: url('img/project-4.jpg');
+                        background-image: url('project-4.jpg');
                     }
                     .img5{
-                        background-image: url('img/project-5.jpg');
+                        background-image: url('project-5.jpg');
                     }
                     .img6{
-                        background-image: url('img/project-6.jpg');
+                        background-image: url('project-6.jpg');
                     }
                 }
             }
@@ -612,13 +612,13 @@ body{
                         }
 
                         .imgbox{
-                            background-image: url('img/blog-1.jpg');
+                            background-image: url('blog-1.jpg');
                         }
                         .imgbox2{
-                            background-image: url('img/blog-2.jpg');
+                            background-image: url('blog-2.jpg');
                         }
                         .imgbox3{
-                            background-image: url('img/blog-3.jpg');
+                            background-image: url('blog-3.jpg');
                         }
 
                         .ctbox{
@@ -638,7 +638,7 @@ body{
                                     height: 80px;
                                     border: 5px solid white;
                                     border-radius: 50%;
-                                    background-image: url('img/admin.jpg');
+                                    background-image: url('admin.jpg');
                                 }
                             }
                             .c{
